--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             color: #800000; /* Dark red text */
             font-family: 'Arial', sans-serif;
             text-align: center;
-            padding: 50px;
+            padding: 20px; /* Adjusted padding for mobile */
             overflow: hidden; /* Hide overflow for falling hearts */
         }
         h1, p {
@@ -21,17 +21,17 @@
             100% { transform: translateX(5px); }
         }
         h1 {
-            font-size: 3em;
+            font-size: 2.5em; /* Adjusted font size for mobile */
         }
         p {
-            font-size: 1.5em;
+            font-size: 1.2em; /* Adjusted font size for mobile */
         }
         button {
             background-color: #ff69b4; /* Hot pink button */
             color: white;
             border: none;
-            padding: 15px 30px;
-            font-size: 1.2em;
+            padding: 10px 20px; /* Adjusted padding for mobile */
+            font-size: 1em; /* Adjusted font size for mobile */
             cursor: pointer;
             border-radius: 5px;
             transition: background-color 0.3s;
@@ -43,15 +43,15 @@
         #proposal {
             display: none;
             margin-top: 20px;
-            position: relative; /* Relative position for falling animation */
         }
         #proposal img {
-            max-width: 300px; /* Adjust the size of the image */
+            max-width: 90%; /* Adjust the size of the image for mobile */
+            height: auto; /* Maintain aspect ratio */
             border-radius: 10px; /* Optional: add rounded corners to the image */
         }
         #loveMessage {
             display: none; /* Initially hidden */
-            font-size: 2em;
+            font-size: 1.5em; /* Adjusted font size for mobile */
             margin-top: 20px;
             color: #800000; /* Dark red text */
         }
@@ -110,6 +110,7 @@
     <script>
         function showProposal() {
             document.getElementById("proposal").style.display = "block";
+            document.body.style.overflow = "auto"; // Allow scrolling after proposal is shown
         }
 
         function revealLoveMessage() {
